--- a/silver_geo/views/silver_node_views.xml
+++ b/silver_geo/views/silver_node_views.xml
@@ -9,11 +9,11 @@
                 <xpath expr="//div[@name='geolocalize']" position="inside">
                     <field name="name" widget="coordinate_picker_widget" readonly="1" nolabel="1"/>
                 </xpath>
-                <xpath expr="//notebook/page[@name='network_graph']" position="before">
+                <!--xpath expr="//notebook/page[@name='network_graph']" position="before">
                     <page name="map_view" string="Mapa">
                         <field name="id" class="map-field" widget="node_map"/>
                     </page>
-                </xpath>
+                </xpath-->
             </field>
         </record>
     </data>
