--- a/silver_product/views/silver_radius_views.xml
+++ b/silver_product/views/silver_radius_views.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="view_silver_olt_form_inherit_product" model="ir.ui.view">
-            <field name="name">silver.olt.form.inherit.product</field>
-            <field name="model">silver.olt</field>
-            <field name="inherit_id" ref="silver_network.view_silver_olt_form"/>
+        <record id="view_silver_radius_form_inherit_product" model="ir.ui.view">
+            <field name="name">silver.radius.form.inherit.product</field>
+            <field name="model">silver.radius</field>
+            <field name="inherit_id" ref="silver_network.view_silver_radius_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//group[@name='olt']/group[1]" position="inside">
+                <xpath expr="//group[@name='radius']/group[1]" position="inside">
                     <field name="stock_lot_id"/>
                     <field name="brand_name"/>
                     <field name="model_name"/>
