--- a/silver_network/views/silver_olt_views.xml
+++ b/silver_network/views/silver_olt_views.xml
@@ -57,9 +57,7 @@
                         <group name="olt">
                             <group>
                                 <field name="hostname_olt"/>
-                                <field name="software_version"/>
-                                <field name="is_core_baudcom" invisible="1"/>
-                                <field name="core_ids" widget="many2many_tags" invisible="is_core_baudcom"/>
+                                <field name="core_ids" widget="many2many_tags" />
                                 <field name="bridge_core_id" invisible="1"/>
                                 <field name="is_vsol_marca" invisible="1"/>
                                 <field name="is_brand_zte" invisible="1"/>
@@ -68,7 +66,7 @@
                             </group>
                             <group>
                                 <!--field name="brand_id"/-->
-                                <field name="model"/>
+
                                 <field name="num_slot_olt"/>
                             </group>
                         </group>
