--- a/silver_product/views/menus.xml
+++ b/silver_product/views/menus.xml
@@ -6,7 +6,7 @@
         <menuitem id="menu_isp_asset_map"
                   name="Marcas"
                   parent="silver_network.menu_isp_config"
-                  action="silver_network.action_product_brand"
+                  action="action_product_brand"
                   sequence="13"/>
     </data>
 </odoo>
