--- a/silver_provisioning/views/silver_box_views.xml
+++ b/silver_provisioning/views/silver_box_views.xml
@@ -7,11 +7,19 @@
             <field name="model">silver.box</field>
             <field name="inherit_id" ref="silver_network.view_silver_box_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//div[@name='button_box']" position="inside">
+                <!--xpath expr="//div[@name='button_box']" position="inside">
                     <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-arrows-v">
                         <field string="Contratos" name="contract_count" widget="statinfo"/>
                     </button>
+                </xpath-->
+
+  <xpath expr="//notebook/page[1]" position="before">
+                      <page string="Contratos">
+                   <field name="contract_ids"/>
+                      </page>
+
                 </xpath>
+
             </field>
         </record>
     </data>
