--- a/silver_provisioning/views/silver_core_views.xml
+++ b/silver_provisioning/views/silver_core_views.xml
@@ -6,13 +6,21 @@
             <field name="model">silver.core</field>
             <field name="inherit_id" ref="silver_network.view_silver_core_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//div[@name='button_box']" position="inside">
+                <!--xpath expr="//div[@name='button_box']" position="inside">
                     <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-arrows-v">
                         <field string="Contratos" name="contract_count" widget="statinfo"/>
                     </button>
 
 
+                </xpath-->
+
+  <xpath expr="//page[@name='aps']" position="before">
+                      <page string="Contratos">
+                   <field name="contract_ids"/>
+                      </page>
+
                 </xpath>
+
             </field>
         </record>
     </data>
